sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:8: error: value mod is not a member of Int
    if(count mod 2 == 0){
             ^